# Rift

./: .gitignore  Dockerfile  README.md  build.sbt
cpp/: .gitignore  CMakeLists.txt  main.cpp
cpp/cmake/: BuildFlatBuffers.cmake
cpp/schema/: Employment.fbs
project/: sbt-antlr4.sbt
src/main/scala/lang/: IR.scala
src/main/scala/schema/: FlatBuffer.scala
src/main/scala/server/: Server.scala
src/main/scala/storage/: Base.scala  Columnar.scala  File.scala  RocksDB.scala
